[package]
name = "kecc"
version = "0.1.0"
authors = ["Chunmyong Park <chunmyong.park@kaist.ac.kr>", "Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
edition = "2021"
default-run = "kecc"

description = "KAIST Educational C Compiler"
homepage = "https://github.com/kaist-cp/kecc"
repository = "https://github.com/kaist-cp/kecc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kecc"
path = "src/lib.rs"

[[bin]]
name = "kecc"
path = "bin/kecc.rs"
required-features = ["build-bin"]

[[bin]]
name = "fuzz"
path = "bin/fuzz.rs"
required-features = ["build-bin"]

[features]
build-bin = ["clap"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
thiserror = "1.0.60"
lang-c = "0.15.1"
itertools = "0.12.1"
tempfile = "3.10.1"
ordered-float = "4.2.0"
hexf-parse = "0.2.1"
wait-timeout = "0.2.0"
peg = "0.8.3"
rand = "0.8.5"
