[package]
name = "kecc"
version = "0.1.0"
authors = [
  "Chunmyong Park <chunmyong.park@kaist.ac.kr>",
  "Jeehoon Kang <jeehoon.kang@kaist.ac.kr>",
]
edition = "2024"
default-run = "kecc"

description = "KAIST Educational C Compiler"
homepage = "https://github.com/kaist-cp/kecc"
repository = "https://github.com/kaist-cp/kecc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kecc"
path = "src/lib.rs"

[[bin]]
name = "kecc"
path = "bin/kecc.rs"
required-features = ["build-bin"]

[[bin]]
name = "fuzz"
path = "bin/fuzz.rs"
required-features = ["build-bin"]

[features]
build-bin = ["clap"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"], optional = true }
thiserror = "2.0.11"
lang-c = "0.15.1"
itertools = "0.14.0"
tempfile = "3.17.1"
ordered-float = "5.0.0"
hexf-parse = "0.2.1"
wait-timeout = "0.2.1"
peg = "0.8.4"
rand = "0.9.0"

# [dev-depdenencies]
dir-test = "0.4"
